# amaran

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  bluetooth_probe.swift  native_mesh_config.swift  native_mesh_crypto.swift  native_mesh_provisioning.swift  native_mesh_state.swift  native_telink_control.swift  package.json  requirements-tui.txt
BluetoothProbe.app/Contents/: Info.plist
docs/: mesh-join.md  no-desktop-roadmap.md
firmware/sidus-join-probe/: CMakeLists.txt  README.md  prj.conf
firmware/sidus-join-probe/src/: main.c
scripts/: amaran-tui  amaran_capabilities.py  build-bluetooth-probe  decode-dk-capture  decode-nordic-pcap  discover-existing-mesh  dk-capture-to-state-join  dk-sidus-attempt  extcap-follow-mesh-provisioning  read-dk-capture  scene-store  sidus-backup-import  sniff-mesh-provisioning  test-cli-wrapper
tests/: native_mesh_crypto_tests.swift
